[package]
authors = ["messense <messense@icloud.com>"]
description = "Unified diff parsing/metadata extraction library for Rust"
documentation = "https://messense.github.io/unidiff-rs"
edition = "2024"
homepage = "https://github.com/messense/unidiff-rs"
keywords = ["diff", "git", "svn", "hg", "unified"]
license = "MIT"
name = "unidiff"
readme = "README.md"
repository = "https://github.com/messense/unidiff-rs"
version = "0.3.4"

[dependencies]
regex = "1.0"
encoding_rs = { version = "0.8", optional = true }

[features]
default = ["encoding"]
encoding = ["encoding_rs"]
unstable = []
